# prim_tree

./: CMakeLists.txt  README.md
include/: graph.h  mainwindow.h  prim_all_mst_solver.h
src/: graph.cpp  main.cpp  mainwindow.cpp  prim_all_mst_solver.cpp
